# solanastaking

./: .env-cmdrc  .gitignore  Anchor.toml  README.md  package-lock.json  package.json  test-keypair.json
programs/neonomad/: Cargo.toml
programs/neonomad/src/: lib.rs
staking_scripts/: CONFIG.js  change_pool_multipler.js  change_pool_point.js  change_staking_rate.js  create_pool.js  create_reward_config.js  create_state.js  fetch_all_users.js  fund_reward.js  neonomad_staking.json  set_reward_config.js
tests/: staking_test.js  utils.js
